# app/Http/Controllers/AudienceController.php
@@ -15,25 +15,26 @@ class AudienceController extends Controller
      * @return JsonResponse
      * @OA\Post(
      *     path="/api/Audience",
+     *     description="Добавить аудиторию",
      *     tags={"Audience"},
      *     @OA\RequestBody(
-     *          description="Название для созданной аудитории",
+     *          description="Тело запроса для создания аудитории",
      *          required=true,
      *          @OA\JsonContent(
-     *              example={
-     *                  "name": "38"
-     *              }
+     *              required={"name"},
+     *              @OA\Property(property="name", type="string", example="38", description="Название аудитории")
      *          )
      *     ),
      *     @OA\Response(
      *          response="200",
      *          description="Аудитория добавлена",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessRespone")
      *     ),
      *     @OA\Response(
      *          response="422",
      *          description="Валидация не пройдена",
      *          @OA\JsonContent(
-     *              example={"title": "Ошибка валидации","text": "Проверьте правильность заполнения полей","errors": {"name": {"Поле `Название` обязательно для заполнения."}}}
+     *              ref="#/components/schemas/ErrorResponse",
                 )
      *     )
      * )
@@ -52,6 +53,29 @@ class AudienceController extends Controller
     /**
      * @param AudienceFormRequest $req
      * @return JsonResponse
+     * @OA\Delete(
+     *     path="/api/Audience",
+     *     description="Удалить аудиторию",
+     *     tags={"Audience"},
+     *     @OA\RequestBody(
+     *          description="Тело запроса для удаления аудитории",
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"id"},
+     *              @OA\Property(property="id", type="integer", example="1", description="ID аудитории")
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Аудитория удалена",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessRespone")
+     *     ),
+     *     @OA\Response(
+     *          response="422",
+     *          description="Валидация не пройдена",
+     *          @OA\JsonContent(ref="#/components/schemas/ErrorResponse",)
+     *     )
+     * )
      */
     public function deleteAudience(AudienceFormRequest $req): JsonResponse
     {
@@ -66,6 +90,30 @@ class AudienceController extends Controller
     /**
      * @param AudienceFormRequest $req
      * @return JsonResponse
+     * @OA\Patch(
+     *     path="/api/Audience",
+     *     description="Отредактировать аудиторию",
+     *     tags={"Audience"},
+     *     @OA\RequestBody(
+     *          description="Тело запроса для редактирования аудитории",
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"id", "name"},
+     *              @OA\Property(property="id", type="integer", example="1", description="ID аудитории"),
+     *              @OA\Property(property="name", type="string", example="38", description="Название аудитории")
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Аудитория отредактирована",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessRespone")
+     *     ),
+     *     @OA\Response(
+     *          response="422",
+     *          description="Валидация не пройдена",
+     *          @OA\JsonContent(ref="#/components/schemas/ErrorResponse",)
+     *     )
+     * )
      */
     public function editAudience (AudienceFormRequest $req): JsonResponse
     {
